--- a/src/app.html
+++ b/src/app.html
@@ -7,6 +7,6 @@
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<main>%sveltekit.body%</main>
+		<div class="h-full">%sveltekit.body%</div>
 	</body>
 </html>
